--- a/TeatroTicket/src/front/PainelMenu.form
+++ b/TeatroTicket/src/front/PainelMenu.form
@@ -2,8 +2,11 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
+    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+      <Color blue="ff" green="ff" red="ff" type="rgb"/>
+    </Property>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[411, 540]"/>
+      <Dimension value="[950, 680]"/>
     </Property>
   </Properties>
   <AuxValues>
@@ -22,27 +25,28 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="76" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="botaoComprarIngresso" alignment="0" min="-2" pref="249" max="-2" attributes="0"/>
-                  <Component id="botaoMeusIngressos" alignment="0" min="-2" pref="249" max="-2" attributes="0"/>
-                  <Component id="botaoEstatisticasVendas" alignment="0" min="-2" pref="249" max="-2" attributes="0"/>
-                  <Component id="botaoSair" alignment="0" min="-2" pref="249" max="-2" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  </Group>
+              <EmptySpace min="-2" pref="225" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="botaoComprarIngresso" alignment="0" max="32767" attributes="0"/>
+                  <Component id="botaoMeusIngressos" alignment="0" max="32767" attributes="0"/>
+                  <Component id="botaoEstatisticasVendas" alignment="0" max="32767" attributes="0"/>
+                  <Component id="botaoSair" alignment="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="86" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="225" max="-2" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="373" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" max="-2" attributes="0"/>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="botaoComprarIngresso" min="-2" pref="60" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
               <Component id="botaoMeusIngressos" min="-2" pref="60" max="-2" attributes="0"/>
@@ -50,7 +54,7 @@
               <Component id="botaoEstatisticasVendas" min="-2" pref="60" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
               <Component id="botaoSair" min="-2" pref="60" max="-2" attributes="0"/>
-              <EmptySpace pref="48" max="32767" attributes="0"/>
+              <EmptySpace pref="106" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -75,6 +79,9 @@
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Comprar Ingressos"/>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[500, 32]"/>
+        </Property>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="botaoMeusIngressos">
