--- a/TeatroTicket/src/front/PainelComprarIngresso.form
+++ b/TeatroTicket/src/front/PainelComprarIngresso.form
@@ -23,9 +23,9 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
-              <Component id="jButton1" min="-2" pref="100" max="-2" attributes="0"/>
+              <Component id="botaoVoltar" min="-2" pref="100" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
-              <Component id="jButton2" min="-2" max="-2" attributes="0"/>
+              <Component id="botaoEscolherPoltrona" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
@@ -45,19 +45,19 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="189" pref="189" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jToggleButton7" alignment="0" min="-2" pref="161" max="-2" attributes="0"/>
-                          <Component id="jToggleButton9" alignment="0" min="-2" pref="161" max="-2" attributes="0"/>
-                          <Component id="jToggleButton13" alignment="0" min="-2" pref="161" max="-2" attributes="0"/>
+                          <Component id="botaoPlateiaA" alignment="0" min="-2" pref="161" max="-2" attributes="0"/>
+                          <Component id="botaoCamarote4e5" alignment="0" min="-2" pref="161" max="-2" attributes="0"/>
+                          <Component id="botaoBalcaoNobre" alignment="0" min="-2" pref="161" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jToggleButton11" alignment="0" min="-2" pref="161" max="-2" attributes="0"/>
-                          <Component id="jToggleButton8" alignment="0" min="-2" pref="161" max="-2" attributes="0"/>
+                          <Component id="botaoFrisa1a3" alignment="0" min="-2" pref="161" max="-2" attributes="0"/>
+                          <Component id="botaoPlateiaB" alignment="0" min="-2" pref="161" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="jToggleButton10" alignment="1" min="-2" pref="161" max="-2" attributes="0"/>
-                          <Component id="jToggleButton12" alignment="1" min="-2" pref="161" max="-2" attributes="0"/>
+                          <Component id="botaoCamarote1a3" alignment="1" min="-2" pref="161" max="-2" attributes="0"/>
+                          <Component id="botaoFrisa1a6" alignment="1" min="-2" pref="161" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -66,9 +66,9 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="189" pref="189" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="jToggleButton4" alignment="1" pref="158" max="32767" attributes="0"/>
+                  <Component id="botaoManha" alignment="1" pref="158" max="32767" attributes="0"/>
                   <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="jToggleButton1" alignment="0" max="32767" attributes="0"/>
+                      <Component id="botaoEspetaculo1" alignment="0" max="32767" attributes="0"/>
                       <Component id="imagemEspetaculo1" alignment="0" pref="158" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -80,19 +80,19 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
-                          <Component id="jToggleButton2" max="32767" attributes="0"/>
+                          <Component id="botaoEspetaculo2" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
-                      <Component id="jToggleButton5" min="-2" pref="161" max="-2" attributes="0"/>
+                      <Component id="botaoTarde" min="-2" pref="161" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jToggleButton6" alignment="0" min="-2" pref="161" max="-2" attributes="0"/>
+                  <Component id="botaoNoite" alignment="0" min="-2" pref="161" max="-2" attributes="0"/>
                   <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                      <Component id="jToggleButton3" alignment="0" max="32767" attributes="0"/>
+                      <Component id="botaoEspetaculo3" alignment="0" max="32767" attributes="0"/>
                       <Component id="imagemEspetaculo3" alignment="1" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -113,38 +113,38 @@
               </Group>
               <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="jToggleButton1" alignment="0" pref="32" max="32767" attributes="0"/>
-                  <Component id="jToggleButton2" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jToggleButton3" alignment="0" max="32767" attributes="0"/>
+                  <Component id="botaoEspetaculo1" alignment="0" pref="32" max="32767" attributes="0"/>
+                  <Component id="botaoEspetaculo2" alignment="0" max="32767" attributes="0"/>
+                  <Component id="botaoEspetaculo3" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
               <Component id="tituloSessao" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="jToggleButton4" alignment="0" pref="32" max="32767" attributes="0"/>
-                  <Component id="jToggleButton5" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jToggleButton6" alignment="0" max="32767" attributes="0"/>
+                  <Component id="botaoManha" alignment="0" pref="32" max="32767" attributes="0"/>
+                  <Component id="botaoTarde" alignment="0" max="32767" attributes="0"/>
+                  <Component id="botaoNoite" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               <Component id="tituloArea" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jToggleButton7" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
-                  <Component id="jToggleButton8" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
-                  <Component id="jToggleButton10" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="botaoPlateiaA" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="botaoPlateiaB" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="botaoCamarote1a3" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="18" pref="18" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jToggleButton9" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
-                  <Component id="jToggleButton11" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
-                  <Component id="jToggleButton12" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="botaoCamarote4e5" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="botaoFrisa1a3" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="botaoFrisa1a6" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-              <Component id="jToggleButton13" min="-2" pref="32" max="-2" attributes="0"/>
+              <Component id="botaoBalcaoNobre" min="-2" pref="32" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="jButton1" alignment="0" pref="34" max="32767" attributes="0"/>
-                  <Component id="jButton2" alignment="0" max="32767" attributes="0"/>
+                  <Component id="botaoVoltar" alignment="0" pref="34" max="32767" attributes="0"/>
+                  <Component id="botaoEscolherPoltrona" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace pref="43" max="32767" attributes="0"/>
           </Group>
@@ -204,7 +204,7 @@
         <Property name="text" type="java.lang.String" value="&#xc1;rea"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="botaoVoltar">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="45" green="3f" red="15" type="rgb"/>
@@ -218,7 +218,7 @@
         <Property name="text" type="java.lang.String" value="Voltar"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton2">
+    <Component class="javax.swing.JButton" name="botaoEscolherPoltrona">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="62" green="8d" red="27" type="rgb"/>
@@ -232,10 +232,10 @@
         <Property name="text" type="java.lang.String" value="Escolher Poltrona"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoEscolherPoltronaActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JToggleButton" name="jToggleButton1">
+    <Component class="javax.swing.JToggleButton" name="botaoEspetaculo1">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="13" style="1"/>
@@ -246,7 +246,7 @@
         <Property name="text" type="java.lang.String" value="The Batman"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JToggleButton" name="jToggleButton2">
+    <Component class="javax.swing.JToggleButton" name="botaoEspetaculo2">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="13" style="1"/>
@@ -257,7 +257,7 @@
         <Property name="text" type="java.lang.String" value="Kill Bill: Volume 1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JToggleButton" name="jToggleButton3">
+    <Component class="javax.swing.JToggleButton" name="botaoEspetaculo3">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="13" style="1"/>
@@ -267,8 +267,11 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Django Livre"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoEspetaculo3ActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JToggleButton" name="jToggleButton4">
+    <Component class="javax.swing.JToggleButton" name="botaoManha">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="13" style="1"/>
@@ -279,7 +282,7 @@
         <Property name="text" type="java.lang.String" value="Manh&#xe3;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JToggleButton" name="jToggleButton5">
+    <Component class="javax.swing.JToggleButton" name="botaoTarde">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="13" style="1"/>
@@ -290,7 +293,7 @@
         <Property name="text" type="java.lang.String" value="Tarde"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JToggleButton" name="jToggleButton6">
+    <Component class="javax.swing.JToggleButton" name="botaoNoite">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="13" style="1"/>
@@ -301,7 +304,7 @@
         <Property name="text" type="java.lang.String" value="Noite"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JToggleButton" name="jToggleButton7">
+    <Component class="javax.swing.JToggleButton" name="botaoPlateiaA">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="13" style="1"/>
@@ -312,7 +315,7 @@
         <Property name="text" type="java.lang.String" value="Plateia A - R$40"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JToggleButton" name="jToggleButton8">
+    <Component class="javax.swing.JToggleButton" name="botaoPlateiaB">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="13" style="1"/>
@@ -323,7 +326,7 @@
         <Property name="text" type="java.lang.String" value="Plateia B - R$80"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JToggleButton" name="jToggleButton9">
+    <Component class="javax.swing.JToggleButton" name="botaoCamarote4e5">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="13" style="1"/>
@@ -334,7 +337,7 @@
         <Property name="text" type="java.lang.String" value="Camarote 4-5 R$80"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JToggleButton" name="jToggleButton10">
+    <Component class="javax.swing.JToggleButton" name="botaoCamarote1a3">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="13" style="1"/>
@@ -345,7 +348,7 @@
         <Property name="text" type="java.lang.String" value="Camarote 1-3 R$80"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JToggleButton" name="jToggleButton11">
+    <Component class="javax.swing.JToggleButton" name="botaoFrisa1a3">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="13" style="1"/>
@@ -356,7 +359,7 @@
         <Property name="text" type="java.lang.String" value="Frisa 1-3 R$120"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JToggleButton" name="jToggleButton12">
+    <Component class="javax.swing.JToggleButton" name="botaoFrisa1a6">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="13" style="1"/>
@@ -367,7 +370,7 @@
         <Property name="text" type="java.lang.String" value="Frisa 4-6 R$120"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JToggleButton" name="jToggleButton13">
+    <Component class="javax.swing.JToggleButton" name="botaoBalcaoNobre">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="13" style="1"/>
